--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullstackopen-cicd",
   "version": "1.0.4",
-  "description": "Full Stack Open test deploy",
+  "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
     "dev": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --open --mode development",
