--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,17 +1,14 @@
 name: Say hello
 
 on:
-  push:
-    branches:
-      - main
+	push:
+		branches:
+			- main
 
 jobs:
   hello_world:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Echo the message
-        run: |
-          echo "Hola midu!"
-      - name: Dime la fecha
-        run: date
-      - run: ls -l
+  	runs-on: ubuntu-18.04
+		steps:
+			- name: Echo the message
+		run: |
+			echo "Hello, Richard!"
